--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -4,7 +4,7 @@
 
     padding: 0 2rem;
 
-    height: calc(100vh - 5rem);
+    height: calc(95vh - 5rem);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -64,4 +64,135 @@
 
 .seta {
     margin: 0;
+}
+
+.containerSobreMim{
+    
+    background-color: #212121; 
+    padding-bottom: 4rem;
+    > h1 {
+        padding: 2rem 0 1rem 0;
+        text-align: center;
+        text-transform: uppercase;
+        position: relative;
+
+
+        &::before{
+            content: '';
+            height: 1px;
+            border: 3px 3px 0 0;
+            width: 80%;
+            position: absolute;
+            bottom: 1px;
+            left: 8rem;
+
+            background: var( --yellow-500);
+        }
+    }
+
+    
+}
+
+.heroSobreMim{
+    display: flex;  
+    justify-content: center;  
+    align-items: center;  
+    flex-flow: wrap;  
+    margin: 1rem 0 0 0;  
+    height: 100%; 
+
+
+}
+
+.cardSobreMim {
+    position: relative;  
+    overflow: hidden;  
+    margin: 10px;  
+    min-width: 220px;  
+    max-width: 310px;  
+    width: 100%;  
+    color: #333;  
+    text-align: left;  
+    box-shadow: none !important;  
+
+    transition: all 0.35s cubic-bezier(0.25, 0.5, 0.5, 0.9); 
+
+    blockquote{
+        display: block;  
+        border-radius: 8px;  
+        position: relative;  
+        background-color: #fafafa;  
+        padding: 25px 50px 30px 50px;  
+        font-size: 0.8em;  
+        font-weight: bold;  
+        margin: 0;  
+        line-height: 1.6em;
+        text-align: justify;  
+        font-style: italic; 
+
+        a{
+            color: var(--yellow-500);
+        }
+
+        &::after, &::before {
+            content: "\201C";  
+            position: absolute;  
+            font-size: 50px;  
+            opacity: 0.3; 
+        }
+
+        &::before{
+            top: 25px;  
+            left: 20px;  
+        }
+
+        &::after {
+            content: "\201D";  
+            right: 20px;  
+            bottom: 0;  
+        }
+    }
+
+    img {
+        max-width: 100%;  
+        vertical-align: middle;  
+        height: 90px;  
+        width: 90px;  
+        border-radius: 50%;  
+        margin: 40px 0 0 10px; 
+    }
+
+    .arrowSobreMim {
+        top: 100%;  
+        width: 0;  
+        height: 0;  
+        border-left: 0 solid transparent;  
+        border-right: 25px solid transparent;  
+        border-top: 25px solid #fafafa;  
+        margin: 0;  
+        position: absolute;  
+    }
+
+    .descricaoSobreMim {
+        position: absolute;  
+        bottom: 45px;  
+        padding: 0 10px 0 120px;  
+        margin: 0;  
+        text-transform: uppercase;  
+        color: #ffffff;  
+        -webkit-transform: translateY(50%);  
+        transform: translateY(50%); 
+
+        h5 {
+            opacity: 0.8;  
+            margin: 0;  
+            font-weight: 900;  
+        }
+
+        h5 span{
+            font-weight: 400;  
+            text-transform: none;  
+            padding-left: 5px;  
+        }
+    }
 }
