--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -49,7 +49,9 @@
 }
 
 .imgWrapper {
-
+    @media (max-width: 875px){
+        display: none;
+    }
     img {
         border-radius: 200rem;
     }
@@ -78,6 +80,10 @@
 
 
         &::before{
+
+            @media (max-width: 800px){
+                display: none;
+            }
             content: '';
             height: 1px;
             border: 3px 3px 0 0;
